--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -1,5 +1,5 @@
 .container {
-    height: 90vh;
+    height: 110vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,9 +22,9 @@
 form {
     display: flex;
     flex-direction: column;
-    width: 30rem;
+    width: 20rem;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 0px 60px;
     position: relative;
 }
@@ -38,7 +38,7 @@ h2 {
     padding: 10px;
     height: 50px;
     border: none;
-    background-color: #e50075;
+    background-color: rgb(68, 68, 240);
     color: white;
     border-radius: 5px;
     font-weight: 600;
