--- a/client/src/pages/login.css
+++ b/client/src/pages/login.css
@@ -6,7 +6,21 @@ input,
 select {
     padding: 15px;
     margin: 15px 0;
-    width: 90%;
+    width: 80%;
     border: 1px solid gray;
     border-radius: 5px;
+}
+
+.new{
+    padding: 0 0 20px 0;
+    text-decoration: none;
+}
+a{
+    text-decoration: none;
+    color: #0056b3;
+    font-weight: 700;
+}
+a:hover {
+    text-decoration: none; /* Underline on hover */
+    color: #507ba8; /* Darken the color on hover */
 }
