--- a/client/src/pages/admin.css
+++ b/client/src/pages/admin.css
@@ -36,11 +36,11 @@
 }
 
 .moreBtn {
-    width: 50vw;
+    width: 20vw;
     padding: 10px;
     height: 50px;
     border: none;
-    background-color: #e50075;
+    background-color: rgb(7, 7, 41);
     color: white;
     border-radius: 5px;
     font-weight: 600;
