--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -8,7 +8,7 @@
 
 .container::before {
     content: "";
-    background-image: url('/src/factory.jpg');
+    background-image: url('/src/bines.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
